--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
             <version>4.0.0-M1</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.20.0</version>
+        </dependency>
 
     </dependencies>
 
